tests/specs/run/unstable/kv.out
error: Uncaught (in promise) TypeError: Deno.openKv is not a function
const db = await Deno.openKv();
                      ^
    at file:///Users/ib/dev/deno/tests/specs/run/unstable/kv.ts:1:23

    info: Deno.openKv() is an unstable API
    hint: Run again with `--unstable-kv` flag to enable this API.
